# face-recog

./: README-FaceRecognition.txt  README.md
FaceRecog_UI/: app_streamlit.py  login_history.json  requirements.txt  test_realtime_logging.py  user_management.py  users.csv
FaceRecog_UI/org/: app_streamlit.py.bk  app_streamlit.py.org
FaceRecognition-FAISS/: access_history.py  camera.py  network_binary_face_detector.nb  user_data.json
FaceRecognition-FAISS/bk/: user_data.json
FaceRecognition_sface_pybind/: CMakeLists.txt  face_recognition_pybind.cpp
face_recognition_sface_2021dec_ovx/: BUILD  FaceRecog_wrapper.cpp  FaceRecog_wrapper.h  Makefile  main.cpp.org  vnn_antispoof.c  vnn_antispoof.h  vnn_facedetector3uint8.c  vnn_facedetector3uint8.h  vnn_global.h  vnn_post_process_anfispoof.h  vnn_post_process_antispoof.cpp  vnn_post_process_facedetector.cpp  vnn_post_process_facedetector.hpp  vnn_post_process_sface.cpp  vnn_post_process_sface.h  vnn_pre_process.cpp  vnn_pre_process.h  vnn_sface.c  vnn_sface.h
